[package]
name = "okosamalunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.28.5"
serde = "1.0.164"
tokio = "1.28.2"
ulid = "1.0.0"
